--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,8 @@
     <div class="newheaderinner">
         <img src="../assets/images/shaterblockLogo.png" class="newhomelogo">
         <div class="newnavbarright">
+
+            <span class="newnavclsmenu">Menu</span>
             <span class="newnavcls" onclick="openNav()">&#9776;</span>
             <a href="javascript:void(0)" class="closebtn" id="closebtn" onclick="closeNav()">&times;</a>
         </div>
