--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -170,7 +170,7 @@
             boutique of experienced and productive companies that assist and improve the
             entertainment industry and impulse products.</h2>
 
-        <h2 class="btndivhomenew"><strong><a class="btnyellow" [routerLink]="['/model-talent-division']">Shatter Proof Marketing</a> <a class="btnyellow" [routerLink]="['/our-models-talent']">Shatter Proof Models</a> <a class="btnyellow" [routerLink]="['/music-division']">Shatter Proof Music Group</a> <a class="btnyellow" [routerLink]="['/#']">Shatter Proof Media</a></strong></h2>
+        <h2 class="btndivhomenew"><strong><a class="btnyellow" [routerLink]="['/clients-campaigns']">Shatter Proof Marketing</a> <a class="btnyellow" [routerLink]="['/model-talent-division']">Shatter Proof Models</a> <a class="btnyellow" [routerLink]="['/music-division']">Shatter Proof Music Group</a> <a class="btnyellow" [routerLink]="['/#']">Shatter Proof Media</a></strong></h2>
 
         <!--    <p>Founded and created in 1999, Shatter Blok is a Los Angeles, California based company has done  <span>Marketing</span>,  <span>Promotions</span>,
                 <span>Model Management</span>, staffing and musical digital distribution for some of the most amazing up and coming new faces in modeling, some of the hottest clubs, radio stations, record labels, clothing, foot wear lines, and beverage companies in and around Los
@@ -321,25 +321,30 @@
     <div class="formdivwrapper">
         <h2>Contact Us</h2>
         <div class="formdivwrapper_content">
-            <form>
+            <form [formGroup]="myForm" (ngSubmit)="doSubmit(mysuccess)">
                 <div class="form-row">
                     <div class="form-group col-xs-6 formpaddingright">
-                        <input type="text" class="form-control" name="firstname" id="firstname" placeholder="First Name">
+                        <input type="text" class="form-control" name="firstname" id="firstname" placeholder="First Name" [formControl]="myForm.controls['firstname']" (keyup)="issubmit=0">
+                        <span class="error" *ngIf="!myForm.controls['firstname'].valid && myForm.controls['firstname'].touched && issubmit == 1">First Name field is required.</span>
                     </div>
                     <div class="form-group col-xs-6">
-                        <input type="text" class="form-control" name="lastname" id="lastname" placeholder="Last Name">
+                        <input type="text" class="form-control" name="lastname" id="lastname" placeholder="Last Name" [formControl]="myForm.controls['lastname']" (keyup)="issubmit=0">
+                        <span class="error" *ngIf="!myForm.controls['lastname'].valid && myForm.controls['lastname'].touched && issubmit == 1">Last Name field is required.</span>
                     </div>
                     <div class="form-group col-xs-6 formpaddingright">
-                        <input type="email" class="form-control" name="email" id="email" placeholder="Email *">
+                        <input type="email" class="form-control" name="email" id="email" placeholder="Email *" [formControl]="myForm.controls['email']" (keyup)="issubmit=0">
+                        <span class="error" *ngIf="!myForm.controls['email'].valid && myForm.controls['email'].touched && issubmit == 1 ">Email field is required Give proper email id.</span>
                     </div>
                     <div class="form-group col-xs-6">
-                        <input type="text" class="form-control" name="phone" id="phone" placeholder="Phone *">
+                        <input type="text" class="form-control" name="phone" id="phone" placeholder="Phone *" [formControl]="myForm.controls['phone']" (keyup)="issubmit=0">
+                        <span class="error" *ngIf="!myForm.controls['phone'].valid && myForm.controls['phone'].touched && issubmit==1">Phone field is required.</span>
                     </div>
                 </div>
                 <div class="clearfix"></div>
                 <div class="form-row">
                     <div class="form-group col-sm-12 col-xs-12">
-                        <textarea class="form-control" name="message" id="validationTextarea" placeholder="Message *" rows="3" required></textarea>
+                        <textarea class="form-control" name="message" id="validationTextarea" placeholder="Message *" rows="3" required [formControl]="myForm.controls['message']" (keyup)="issubmit=0"></textarea>
+                        <span class="error" *ngIf="!myForm.controls['message'].valid && myForm.controls['message'].touched && issubmit == 1">Message Box field is required.</span>
                     </div>
                 </div>
                 <div class="clearfix"></div>
@@ -354,6 +359,8 @@
         </div>
     </div>
 </div>
+
+
 
 <app-footer></app-footer>
 
