--- a/src/app/our-models/our-models.component.html
+++ b/src/app/our-models/our-models.component.html
@@ -49,40 +49,43 @@
 
 <div class="ourmodelsblock1">
   <div class="ourmodelsblock1outside">
-      <div class="ourmodelsblock1wrapper">
+    <div class="ourmodelsblock1wrapper">
 
-        <div class="ourmodelssingleblock" *ngFor="let item of model" >
-          <div class="ourmodelssingleimgblock">
-            <div class="ourmodelssingleblockimg1" *ngIf= "item.profile_img==null">
-              <img src="{{apiservice.uplodeimg_url}}{{item.images[0]}}" alt="ourmodels image 11">
-            </div>
-            <div class="ourmodelssingleblockimg1" *ngIf= "item.profile_img!=null" >
-              <img src="{{apiservice.uplodeimg_url}}{{item.profile_img}}" alt="ourmodels image 11">
-            </div>
-            <div class="ourmodelssingleblockimg1" *ngIf="item.images[1]!=null">
-              <img src="{{apiservice.uplodeimg_url}}{{item.images[1]}}" alt="ourmodels image 12">
-            </div>
-
-            <div class="ourmodelssingleblockimg1" *ngIf="item.images[1]==null">
-              <img src="../../assets/images/no-image.jpg" alt="ourmodels image 12">
-            </div>
-
+      <div class="ourmodelssingleblock" *ngFor="let item of model" >
+        <div class="ourmodelssingleimgblock">
+          <div class="ourmodelssingleblockimg1" *ngIf= "item.profile_img==null">
+            <img src="{{apiservice.uplodeimg_url}}{{item.images[0]}}" alt="ourmodels image 11">
           </div>
-          <div class="ourmodelssingleblockoverlay">
-            <div class="ourmodelssingleblockcontent">
-              <h1 class="title-div">{{item.name}}</h1>
-              <div class="measure-div">
-                <p>
-                  Height: {{item.height}} |<br>
-                  Weight: {{item.weight}} | Bust: {{item.bust}}<br>
-                  Waist: {{item.waist}} | Hips: {{item.hips}}
-                </p>
-              </div>
-              <a class="btnyellow"  [routerLink]="['/model-profile',item._id]">See More</a>
+          <div class="ourmodelssingleblockimg1" *ngIf= "item.profile_img!=null" >
+            <img src="{{apiservice.uplodeimg_url}}{{item.profile_img}}" alt="ourmodels image 11">
+          </div>
+          <div class="ourmodelssingleblockimg1" *ngIf="item.second_image==null">
+            <img src="{{apiservice.uplodeimg_url}}{{item.images[1]}}" alt="ourmodels image 12">
+          </div>
+          <div class="ourmodelssingleblockimg1" *ngIf="item.second_image!=null">
+            <img src="{{apiservice.uplodeimg_url}}{{item.second_image}}" alt="ourmodels image 12">
+          </div>
+
+          <div class="ourmodelssingleblockimg1" *ngIf="item.images[1]==null">
+            <img src="../../assets/images/no-image.jpg" alt="ourmodels image 12">
+          </div>
+
+        </div>
+        <div class="ourmodelssingleblockoverlay">
+          <div class="ourmodelssingleblockcontent">
+            <h1 class="title-div">{{item.name}}</h1>
+            <div class="measure-div">
+              <p>
+                Height: {{item.height}} |<br>
+                Weight: {{item.weight}} | Bust: {{item.bust}}<br>
+                Waist: {{item.waist}} | Hips: {{item.hips}}
+              </p>
             </div>
+            <a class="btnyellow"  [routerLink]="['/model-profile',item._id]">See More</a>
           </div>
         </div>
-<!--
+      </div>
+      <!--
 
         <div class="ourmodelssingleblock">
           <div class="ourmodelssingleimgblock">
