--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<span class="nclsback"  (click)="previce()"><i class="fa fa-arrow-left"></i><span class="tooltiptext"><a >Back to Previous page</a></span></span>
+<span *ngIf="!error"  class="nclsback"  (click)="previce()"><i class="fa fa-arrow-left"></i><span class="tooltiptext"><a >Back to Previous page</a></span></span>
 
 <div class="container-fluid newhome_footerdiv">
 
