--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8036,3 +8036,7 @@ p.headertitlepara{
 	visibility: visible;
 }
 
+.uploadsection_wrapper .thumb_gallery_upload2{ margin-left: 50px; }
+
+
+.innerloder{ width:120px; margin:0 auto;}
