--- a/src/app/our-models/our-models.component.html
+++ b/src/app/our-models/our-models.component.html
@@ -52,6 +52,7 @@
     <div class="ourmodelsblock1wrapper">
 
       <div class="ourmodelssingleblock" *ngFor="let item of model" >
+
         <div class="ourmodelssingleimgblock">
           <div class="ourmodelssingleblockimg1" *ngIf= "item.profile_img==null">
             <img src="{{apiservice.uplodeimg_url}}{{item.images[0]}}" alt="ourmodels image 11">
@@ -59,11 +60,11 @@
           <div class="ourmodelssingleblockimg1" *ngIf= "item.profile_img!=null" >
             <img src="{{apiservice.uplodeimg_url}}{{item.profile_img}}" alt="ourmodels image 11">
           </div>
-          <div class="ourmodelssingleblockimg1" *ngIf="item.second_image==null">
+          <div class="ourmodelssingleblockimg1" *ngIf="item.second_img==null">
             <img src="{{apiservice.uplodeimg_url}}{{item.images[1]}}" alt="ourmodels image 12">
           </div>
-          <div class="ourmodelssingleblockimg1" *ngIf="item.second_image!=null">
-            <img src="{{apiservice.uplodeimg_url}}{{item.second_image}}" alt="ourmodels image 12">
+          <div class="ourmodelssingleblockimg1" *ngIf="item.second_img!=null">
+            <img src="{{apiservice.uplodeimg_url}}{{item.second_img}}" alt="ourmodels image 12">
           </div>
 
           <div class="ourmodelssingleblockimg1" *ngIf="item.images[1]==null">
@@ -74,6 +75,7 @@
         <div class="ourmodelssingleblockoverlay">
           <div class="ourmodelssingleblockcontent">
             <h1 class="title-div">{{item.name}}</h1>
+<!--            <p>{{item.second_img}}</p>-->
             <div class="measure-div">
               <p>
                 Height: {{item.height}} |<br>
@@ -85,7 +87,8 @@
           </div>
         </div>
       </div>
-      <!--
+<!--
+
 
         <div class="ourmodelssingleblock">
           <div class="ourmodelssingleimgblock">
@@ -1066,10 +1069,10 @@
               <a class="btnyellow" [routerLink]="'/model-profile'">See More</a>
             </div>
           </div>
-        </div>-->
+        </div>
 
-       <!----------Deleted Model---------------->
-        <!-- <div class="ourmodelssingleblock">
+       &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;Deleted Model&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;
+         <div class="ourmodelssingleblock">
                  <div class="ourmodelssingleimgblock">
                    <div class="ourmodelssingleblockimg1">
                      <img src="../assets/images/ourmodelssingleblockimg13.jpg" alt="ourmodels image 13">
@@ -1091,8 +1094,8 @@
                      <a class="btnyellow" [routerLink]="['/model-profile']">See More</a>
                    </div>
                  </div>
-               </div>-->
-        <!--<div class="ourmodelssingleblock">
+               </div>
+        <div class="ourmodelssingleblock">
           <div class="ourmodelssingleimgblock">
             <div class="ourmodelssingleblockimg1">
               <img src="../assets/images/ourmodelssingleblockimg23.jpg" alt="ourmodels image 23">
@@ -1114,8 +1117,8 @@
               <a class="btnyellow" [routerLink]="['/model-profile']">See More</a>
             </div>
           </div>
-        </div>-->
-        <!-- <div class="ourmodelssingleblock">
+        </div>
+         <div class="ourmodelssingleblock">
          <div class="ourmodelssingleimgblock">
            <div class="ourmodelssingleblockimg1">
              <img src="../assets/images/ourmodelssingleblockimg65.jpg" alt="ourmodels image 65">
@@ -1137,8 +1140,8 @@
              <a class="btnyellow" [routerLink]="['/model-profile']">See More</a>
            </div>
          </div>
-       </div>-->
-        <!--<div class="ourmodelssingleblock">
+       </div>
+        <div class="ourmodelssingleblock">
           <div class="ourmodelssingleimgblock">
             <div class="ourmodelssingleblockimg1">
               <img src="../assets/images/ourmodelssingleblockimg67.jpg" alt="ourmodels image 67">
@@ -1160,8 +1163,8 @@
               <a class="btnyellow" [routerLink]="['/model-profile']">See More</a>
             </div>
           </div>
-        </div>-->
-        <!--<div class="ourmodelssingleblock">
+        </div>
+        <div class="ourmodelssingleblock">
           <div class="ourmodelssingleimgblock">
             <div class="ourmodelssingleblockimg1">
               <img src="../assets/images/ourmodelssingleblockimg7.jpg" alt="ourmodels image 7">
@@ -1183,8 +1186,8 @@
               <a class="btnyellow" [routerLink]="['/model-profile/']">See More</a>
             </div>
           </div>
-        </div>-->
-       <!-- <div class="ourmodelssingleblock">
+        </div>
+        <div class="ourmodelssingleblock">
           <div class="ourmodelssingleimgblock">
             <div class="ourmodelssingleblockimg1">
               <img src="../assets/images/ourmodelssingleblockimg9.jpg" alt="ourmodels image 9">
@@ -1206,9 +1209,9 @@
               <a class="btnyellow" [routerLink]="['/model-profile']">See More</a>
             </div>
           </div>
-        </div>-->
-        <!------------Deleted Model-------------->
-        <!--<div class="ourmodelssingleblock">
+        </div>
+        &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;Deleted Model&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;
+        <div class="ourmodelssingleblock">
           <div class="ourmodelssingleimgblock">
             <div class="ourmodelssingleblockimg1">
               <img src="../assets/images/ourmodelssingleblockimg53.jpg" alt="ourmodels image 53">
@@ -1255,8 +1258,9 @@
               <a class="btnyellow" [routerLink]="['/model-profile']">See More</a>
             </div>
           </div>
-        </div>-->
+        </div>
 
+-->
 
         <div class="jointheteam text-center">
           <a class="btngreen" [routerLink]="['/join-the-talent-team']">Join The Team</a>
