--- a/src/app/model-profile/model-profile.component.html
+++ b/src/app/model-profile/model-profile.component.html
@@ -61,7 +61,7 @@
                 <span class="form-control" ><a href="https://www.instagram.com/{{(model.instagramlink)}}" target="_blank"><i class="fa fa-instagram"></i>{{model.instagramlink}}</a></span>
                 <span class="form-control" *ngIf="model.twitterlink"><a href="https://twitter.com/{{(model.twitterlink)}}" target="_blank"><i class="fa fa-twitter"></i>@{{model.twitterlink}}</a></span>
                 <span class="form-control" *ngIf="model.facebooklink"><a href="https://www.facebook.com/{{(model.facebooklink)}}" target="_blank"><i class="fa fa-facebook"></i>{{model.facebooklink}}</a></span>
-                <span class="form-control" *ngIf="model.modelmayhemlink"><a href="https://{{(model.modelmayhemlink)}}" target="_blank"><img src="../../assets/images/instagram-icon4.png" class="instaicon">{{(model.modelmayhemlink)}}</a></span>
+                <span class="form-control" *ngIf="model.modelmayhemlink"><a href="https://www.modelmayhem.com/{{(model.modelmayhemlink)}}" target="_blank"><img src="../../assets/images/instagram-icon4.png" class="instaicon">{{(model.modelmayhemlink)}}</a></span>
               </div>
 
             </div>
