--- a/src/app/partners/partners.component.html
+++ b/src/app/partners/partners.component.html
@@ -19,7 +19,7 @@
     <h1 class="headertitle">ArtistXP the Artist<br> Experience</h1>
 
     <p>
-      We are building an incredible massive online community of musicians/other talented individuals, fans and excitement named www.ArtistXP.com launching May 6th, 2019<!--March 22nd, 2019--> around our groundbreaking and inspiring new online streaming show, Audio Deadline. Our content is like nothing ever experience before.
+      We are building an incredible massive online community of musicians/other talented individuals, fans and excitement named www.ArtistXP.com launching June 22nd, 2019<!--March 22nd, 2019--> around our groundbreaking and inspiring new online streaming show, Audio Deadline. Our content is like nothing ever experience before.
     </p>
     <h2>PRODUCERS, MUSICIANS, VOCALISTS,DANCERS LISTEN UP!</h2>
     <p>
