--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -351,7 +351,7 @@
                 <div class="form-row">
                     <div class="form-group col-xs-12 text-right">
                         <div class="btncheckshatterproof">
-                            <button type="submit" class="btnyellow" data-toggle="modal">Submit</button>
+                            <button type="submit" class="btnyellow" data-toggle="modal" [disabled]="!myForm.valid">Submit</button>
                         </div>
                     </div>
                 </div>
@@ -361,14 +361,15 @@
 </div>
 
 <ng-template #mysuccess>
-    <div class="modal-body brandmanagement_modal">
+    <div class="modal-body brandmanagement_modal successmodal">
         <div class="cross">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="hide()">X</button>
         </div>
         <div class="logo_wrapper">
-            <img src="../../assets/images/logo.png">
+            <img src="../../assets/images/shaterblockLogo.png">
         </div>
-        <div class="message_success text-center">Successful</div>
+        <h2 class="message_success text-center">Successful</h2>
+        <p class="text-center">THANK YOU FOR CONTACTING SHATTERBLOK! WE WILL GET BACK TO YOU WITH A RESPONSE AS SOON AS POSSIBLE.</p>
 
     </div>
 </ng-template>
